--- a/Projects.css
+++ b/Projects.css
@@ -39,5 +39,1015 @@
     min-height: 109px;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 400px;
+  min-height: 370px;
+}
+
+.u-section-2 .u-text-1 {
+  font-size: 0.875rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: 60px auto 0;
+}
+
+.u-section-2 .u-text-2 {
+  font-weight: 700;
+  margin: 1px auto 0;
+}
+
+.u-section-2 .u-text-3 {
+  font-size: 1rem;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  width: 496px;
+  margin: 11px auto 0;
+}
+
+.u-section-2 .u-list-1 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  width: 100%;
+}
+
+.u-section-2 .u-repeater-1 {
+  grid-auto-columns: calc(33.3333% - 6.66667px);
+  grid-template-columns: repeat(3, calc(33.3333% - 6.66667px));
+  min-height: 1000px;
+  grid-gap: 10px;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 10px;
+}
+
+.u-section-2 .u-image-1 {
+  height: 404px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-group-1 {
+  min-height: 210px;
+  width: 347px;
+  height: auto;
+  margin: -138px auto 0;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 40px 30px 0;
+}
+
+.u-section-2 .u-text-4 {
+  font-weight: 700;
+  margin: 0 auto;
+}
+
+.u-section-2 .u-text-5 {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  font-size: 1rem;
+}
+
+.u-section-2 .u-container-layout-3 {
+  padding: 10px;
+}
+
+.u-section-2 .u-image-2 {
+  height: 404px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-group-2 {
+  min-height: 210px;
+  width: 347px;
+  height: auto;
+  margin: -138px auto 0;
+}
+
+.u-section-2 .u-container-layout-4 {
+  padding: 40px 30px 0;
+}
+
+.u-section-2 .u-text-6 {
+  font-weight: 700;
+  margin: 0 auto;
+}
+
+.u-section-2 .u-text-7 {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  font-size: 1rem;
+}
+
+.u-section-2 .u-container-layout-5 {
+  padding: 10px;
+}
+
+.u-section-2 .u-image-3 {
+  height: 404px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-group-3 {
+  min-height: 210px;
+  width: 347px;
+  height: auto;
+  margin: -138px auto 0;
+}
+
+.u-section-2 .u-container-layout-6 {
+  padding: 40px 30px 0;
+}
+
+.u-section-2 .u-text-8 {
+  font-weight: 700;
+  margin: 0 auto;
+}
+
+.u-section-2 .u-text-9 {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  font-size: 1rem;
+}
+
+.u-section-2 .u-container-layout-7 {
+  padding: 10px;
+}
+
+.u-section-2 .u-image-4 {
+  height: 404px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-group-4 {
+  min-height: 210px;
+  width: 347px;
+  height: auto;
+  margin: -138px auto 0;
+}
+
+.u-section-2 .u-container-layout-8 {
+  padding: 40px 30px 0;
+}
+
+.u-section-2 .u-text-10 {
+  font-weight: 700;
+  margin: 0 auto;
+}
+
+.u-section-2 .u-text-11 {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  font-size: 1rem;
+}
+
+.u-section-2 .u-container-layout-9 {
+  padding: 10px;
+}
+
+.u-section-2 .u-image-5 {
+  height: 404px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-group-5 {
+  min-height: 210px;
+  width: 347px;
+  height: auto;
+  margin: -138px auto 0;
+}
+
+.u-section-2 .u-container-layout-10 {
+  padding: 40px 30px 0;
+}
+
+.u-section-2 .u-text-12 {
+  font-weight: 700;
+  margin: 0 auto;
+}
+
+.u-section-2 .u-text-13 {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  font-size: 1rem;
+}
+
+.u-section-2 .u-container-layout-11 {
+  padding: 10px;
+}
+
+.u-section-2 .u-image-6 {
+  height: 404px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-group-6 {
+  min-height: 210px;
+  width: 347px;
+  height: auto;
+  margin: -138px auto 0;
+}
+
+.u-section-2 .u-container-layout-12 {
+  padding: 40px 30px 0;
+}
+
+.u-section-2 .u-text-14 {
+  font-weight: 700;
+  margin: 0 auto;
+}
+
+.u-section-2 .u-text-15 {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  font-size: 1rem;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 1243px;
+  }
+
+  .u-section-2 .u-list-1 {
+    margin-bottom: -1px;
+    width: auto;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    min-height: 881px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-bottom: 0;
+  }
+
+  .u-section-2 .u-group-1 {
+    width: 267px;
+    min-height: 195px;
+    margin-top: -139px;
+    height: auto;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-top: 60px;
+  }
+
+  .u-section-2 .u-text-4 {
+    width: auto;
+  }
+
+  .u-section-2 .u-text-5 {
+    width: auto;
+    margin-top: 20px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-container-layout-3 {
+    padding-bottom: 0;
+  }
+
+  .u-section-2 .u-group-2 {
+    width: 267px;
+    min-height: 195px;
+    margin-top: -139px;
+    height: auto;
+  }
+
+  .u-section-2 .u-container-layout-4 {
+    padding-top: 60px;
+  }
+
+  .u-section-2 .u-text-6 {
+    width: auto;
+  }
+
+  .u-section-2 .u-text-7 {
+    width: auto;
+    margin-top: 20px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-container-layout-5 {
+    padding-bottom: 0;
+  }
+
+  .u-section-2 .u-group-3 {
+    width: 267px;
+    min-height: 195px;
+    margin-top: -139px;
+    height: auto;
+  }
+
+  .u-section-2 .u-container-layout-6 {
+    padding-top: 60px;
+  }
+
+  .u-section-2 .u-text-8 {
+    width: auto;
+  }
+
+  .u-section-2 .u-text-9 {
+    width: auto;
+    margin-top: 20px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-container-layout-7 {
+    padding-bottom: 0;
+  }
+
+  .u-section-2 .u-group-4 {
+    width: 267px;
+    min-height: 195px;
+    margin-top: -139px;
+    height: auto;
+  }
+
+  .u-section-2 .u-container-layout-8 {
+    padding-top: 60px;
+  }
+
+  .u-section-2 .u-text-10 {
+    width: auto;
+  }
+
+  .u-section-2 .u-text-11 {
+    width: auto;
+    margin-top: 20px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-container-layout-9 {
+    padding-bottom: 0;
+  }
+
+  .u-section-2 .u-group-5 {
+    width: 267px;
+    min-height: 195px;
+    margin-top: -139px;
+    height: auto;
+  }
+
+  .u-section-2 .u-container-layout-10 {
+    padding-top: 60px;
+  }
+
+  .u-section-2 .u-text-12 {
+    width: auto;
+  }
+
+  .u-section-2 .u-text-13 {
+    width: auto;
+    margin-top: 20px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-container-layout-11 {
+    padding-bottom: 0;
+  }
+
+  .u-section-2 .u-group-6 {
+    width: 267px;
+    min-height: 195px;
+    margin-top: -139px;
+    height: auto;
+  }
+
+  .u-section-2 .u-container-layout-12 {
+    padding-top: 60px;
+  }
+
+  .u-section-2 .u-text-14 {
+    width: auto;
+  }
+
+  .u-section-2 .u-text-15 {
+    width: auto;
+    margin-top: 20px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 1932px;
+  }
+
+  .u-section-2 .u-list-1 {
+    margin-bottom: -779px;
+    width: auto;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    grid-auto-columns: calc(50% - 5px);
+    grid-template-columns: repeat(2, calc(50% - 5px));
+    min-height: 1434px;
+  }
+
+  .u-section-2 .u-image-1 {
+    height: 468px;
+  }
+
+  .u-section-2 .u-group-1 {
+    margin-top: -127px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-top: 50px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 468px;
+  }
+
+  .u-section-2 .u-group-2 {
+    margin-top: -127px;
+  }
+
+  .u-section-2 .u-container-layout-4 {
+    padding-top: 50px;
+  }
+
+  .u-section-2 .u-image-3 {
+    height: 468px;
+  }
+
+  .u-section-2 .u-group-3 {
+    margin-top: -127px;
+  }
+
+  .u-section-2 .u-container-layout-6 {
+    padding-top: 50px;
+  }
+
+  .u-section-2 .u-image-4 {
+    height: 468px;
+  }
+
+  .u-section-2 .u-group-4 {
+    margin-top: -127px;
+  }
+
+  .u-section-2 .u-container-layout-8 {
+    padding-top: 50px;
+  }
+
+  .u-section-2 .u-image-5 {
+    height: 468px;
+  }
+
+  .u-section-2 .u-group-5 {
+    margin-top: -127px;
+  }
+
+  .u-section-2 .u-container-layout-10 {
+    padding-top: 50px;
+  }
+
+  .u-section-2 .u-image-6 {
+    height: 468px;
+  }
+
+  .u-section-2 .u-group-6 {
+    margin-top: -127px;
+  }
+
+  .u-section-2 .u-container-layout-12 {
+    padding-top: 50px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 1720px;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    grid-auto-columns: calc(100% - 0px);
+    grid-template-columns: 100%;
+  }
+
+  .u-section-2 .u-image-1 {
+    height: 716px;
+  }
+
+  .u-section-2 .u-group-1 {
+    margin-top: -375px;
+    margin-bottom: -328px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 30px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 716px;
+  }
+
+  .u-section-2 .u-group-2 {
+    margin-top: -375px;
+    margin-bottom: -328px;
+  }
+
+  .u-section-2 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 30px;
+  }
+
+  .u-section-2 .u-image-3 {
+    height: 716px;
+  }
+
+  .u-section-2 .u-group-3 {
+    margin-top: -375px;
+    margin-bottom: -202px;
+  }
+
+  .u-section-2 .u-container-layout-6 {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 30px;
+  }
+
+  .u-section-2 .u-image-4 {
+    height: 716px;
+  }
+
+  .u-section-2 .u-group-4 {
+    margin-top: -375px;
+    margin-bottom: -328px;
+  }
+
+  .u-section-2 .u-container-layout-8 {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 30px;
+  }
+
+  .u-section-2 .u-image-5 {
+    height: 716px;
+  }
+
+  .u-section-2 .u-group-5 {
+    margin-top: -375px;
+    margin-bottom: -328px;
+  }
+
+  .u-section-2 .u-container-layout-10 {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 30px;
+  }
+
+  .u-section-2 .u-image-6 {
+    height: 716px;
+  }
+
+  .u-section-2 .u-group-6 {
+    margin-top: -375px;
+    margin-bottom: -328px;
+  }
+
+  .u-section-2 .u-container-layout-12 {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 30px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 3455px;
+  }
+
+  .u-section-2 .u-text-3 {
+    width: 340px;
+  }
+
+  .u-section-2 .u-list-1 {
+    margin-bottom: 20px;
+    width: auto;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    grid-auto-columns: 100%;
+    min-height: 3170px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-bottom: 30px;
+  }
+
+  .u-section-2 .u-image-1 {
+    height: 441px;
+  }
+
+  .u-section-2 .u-group-1 {
+    margin-top: -126px;
+    margin-bottom: -30px;
+  }
+
+  .u-section-2 .u-container-layout-3 {
+    padding-bottom: 30px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 441px;
+  }
+
+  .u-section-2 .u-group-2 {
+    margin-top: -126px;
+    margin-bottom: -30px;
+  }
+
+  .u-section-2 .u-container-layout-5 {
+    padding-bottom: 30px;
+  }
+
+  .u-section-2 .u-image-3 {
+    height: 441px;
+  }
+
+  .u-section-2 .u-group-3 {
+    margin-top: -126px;
+    margin-bottom: -30px;
+  }
+
+  .u-section-2 .u-container-layout-7 {
+    padding-bottom: 30px;
+  }
+
+  .u-section-2 .u-image-4 {
+    height: 441px;
+  }
+
+  .u-section-2 .u-group-4 {
+    margin-top: -126px;
+    margin-bottom: -30px;
+  }
+
+  .u-section-2 .u-container-layout-9 {
+    padding-bottom: 30px;
+  }
+
+  .u-section-2 .u-image-5 {
+    height: 441px;
+  }
+
+  .u-section-2 .u-group-5 {
+    margin-top: -126px;
+    margin-bottom: -30px;
+  }
+
+  .u-section-2 .u-container-layout-11 {
+    padding-bottom: 30px;
+  }
+
+  .u-section-2 .u-image-6 {
+    height: 441px;
+  }
+
+  .u-section-2 .u-group-6 {
+    margin-top: -126px;
+    margin-bottom: -30px;
+  }
+}.u-section-3 .u-sheet-1 {
+  min-height: 756px;
+}
+
+.u-section-3 .u-layout-wrap-1 {
+  margin-top: 30px;
+  margin-bottom: -187px;
+}
+
+.u-section-3 .u-layout-cell-1 {
+  min-height: 701px;
+}
+
+.u-section-3 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-3 .u-text-1 {
+  font-size: 0.875rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  --animation-custom_in-translate_x: -200px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: 0 auto 0 0;
+}
+
+.u-section-3 .u-text-2 {
+  font-weight: 700;
+  margin: 1px auto 0 0;
+}
+
+.u-section-3 .u-text-3 {
+  font-size: 1rem;
+  --animation-custom_in-translate_x: 0px;
+  --animation-custom_in-translate_y: 0px;
+  --animation-custom_in-opacity: 0;
+  --animation-custom_in-rotate: 0deg;
+  --animation-custom_in-scale: 1;
+  margin: 11px 94px 0 0;
+}
+
+.u-section-3 .u-accordion-1 {
+  margin-top: 30px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-accordion-link-1 {
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.u-section-3 .u-icon-1 {
+  height: 20px;
+  width: 20px;
+}
+
+.u-section-3 .u-accordion-pane-1 {
+  min-height: 150px;
+}
+
+.u-section-3 .u-container-layout-2 {
+  padding: 20px;
+}
+
+.u-section-3 .u-accordion-link-2 {
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.u-section-3 .u-icon-2 {
+  height: 20px;
+  width: 20px;
+}
+
+.u-section-3 .u-accordion-pane-2 {
+  min-height: 150px;
+}
+
+.u-section-3 .u-container-layout-3 {
+  padding: 20px;
+}
+
+.u-section-3 .u-accordion-link-3 {
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.u-section-3 .u-icon-3 {
+  height: 20px;
+  width: 20px;
+}
+
+.u-section-3 .u-accordion-pane-3 {
+  min-height: 150px;
+}
+
+.u-section-3 .u-container-layout-4 {
+  padding: 20px;
+}
+
+.u-section-3 .u-layout-cell-2 {
+  min-height: 703px;
+}
+
+.u-section-3 .u-container-layout-5 {
+  padding: 30px 30px 12px;
+}
+
+.u-section-3 .u-image-1 {
+  height: 659px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-group-1 {
+  min-height: 161px;
+  width: 477px;
+  height: auto;
+  margin: -187px auto 0;
+}
+
+.u-section-3 .u-container-layout-6 {
+  padding-right: 30px;
+  padding-left: 30px;
+}
+
+.u-section-3 .u-text-7 {
+  font-weight: 600;
+  margin: 30px 0 0;
+}
+
+.u-section-3 .u-btn-1 {
+  background-image: none;
+  font-size: 1.25rem;
+  margin: 0 auto 0 85px;
+  padding: 0;
+}
+
+.u-section-3 .u-icon-4 {
+  font-size: 2.65em;
+  margin-right: 20px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 802px;
+  }
+
+  .u-section-3 .u-layout-wrap-1 {
+    margin-bottom: -132px;
+  }
+
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 712px;
+  }
+
+  .u-section-3 .u-text-3 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 712px;
+  }
+
+  .u-section-3 .u-group-1 {
+    min-height: 187px;
+    margin-top: -209px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+    height: auto;
+  }
+
+  .u-section-3 .u-text-7 {
+    font-size: 1.25rem;
+  }
+
+  .u-section-3 .u-btn-1 {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 785px;
+  }
+
+  .u-section-3 .u-layout-wrap-1 {
+    margin-bottom: -128px;
+  }
+
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 695px;
+  }
+
+  .u-section-3 .u-container-layout-1 {
+    padding-bottom: 27px;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 695px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 412px;
+  }
+
+  .u-section-3 .u-group-1 {
+    min-height: 150px;
+    margin-top: -178px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-3 .u-text-7 {
+    font-size: 1rem;
+    margin-top: 0;
+  }
+
+  .u-section-3 .u-btn-1 {
+    font-size: 0.875rem;
+    margin-left: auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 664px;
+  }
+
+  .u-section-3 .u-layout-wrap-1 {
+    position: relative;
+  }
+
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-3 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 1600px;
+  }
+
+  .u-section-3 .u-container-layout-5 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: -5272px;
+  }
+
+  .u-section-3 .u-group-1 {
+    margin-top: -493px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-3 .u-container-layout-6 {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 546px;
+  }
+
+  .u-section-3 .u-layout-wrap-1 {
+    margin-bottom: 30px;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 469px;
+  }
+
+  .u-section-3 .u-image-1 {
+    margin-top: 4px;
+    height: 401px;
+  }
+
+  .u-section-3 .u-group-1 {
+    margin-top: -169px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
 }
