--- a/Services.css
+++ b/Services.css
@@ -774,7 +774,7 @@
 .u-container-layout.hover > .u-section-2 .u-text-14 {
   color: #ffffff !important;
 } .u-section-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url("images/successful-happy-group-of-people-learning-software-engineering-and-business-during-presentation-e1637055354309.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('images/successful-happy-group-of-people-learning-software-engineering-and-business-during-presentation-e1637055354309.jpg');
 }
 
 .u-section-3 .u-sheet-1 {
